Cycles - Shadow catcher error in viewport rendering when Exposure value is different than 1.00 #80129

Closed
opened 2020-08-26 11:30:43 +02:00 by Marco G · 3 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: c2b144df39
Worked: ---

Short description of error
Cycles:
Shadow catcher is bugged when Film->Exposure is set different than 1.00.
This affect just viewport rendering, not f12 render

Exact steps for others to reproduce the error
Open the attached file, start viewport rendering, everything fine. If you set a different value for "Exposure" under "Film" tab, the plane shows an extremely dark shadowing.

shadow-catcher-exposure_001.jpg

shadow-catcher-exposure_002.jpg

shadow-catcher-exposure_001.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: `c2b144df39` Worked: --- **Short description of error** Cycles: Shadow catcher is bugged when Film->Exposure is set different than 1.00. This affect just viewport rendering, not f12 render **Exact steps for others to reproduce the error** Open the attached file, start viewport rendering, everything fine. If you set a different value for "Exposure" under "Film" tab, the plane shows an extremely dark shadowing. ![shadow-catcher-exposure_001.jpg](https://archive.blender.org/developer/F8811811/shadow-catcher-exposure_001.jpg) ![shadow-catcher-exposure_002.jpg](https://archive.blender.org/developer/F8811814/shadow-catcher-exposure_002.jpg) [shadow-catcher-exposure_001.blend](https://archive.blender.org/developer/F8811816/shadow-catcher-exposure_001.blend)
Author

Added subscriber: @marcog

Added subscriber: @marcog

This issue was referenced by 0498feb0df

This issue was referenced by 0498feb0dfc221fb7fb060728e2fd0be6d8085b4

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-08-26 19:29:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80129
No description provided.