Fix T80129: Cycles shadow catcher viewport error with exposure other than 1